# VirtualWorld

./: .gitignore  CMakeLists.txt
src/: Animal.cpp  Animal.hpp  Organism.cpp  Organism.hpp  Plant.cpp  Plant.hpp  Renderer.cpp  Renderer.hpp  Vector.cpp  Vector.hpp  World.cpp  World.hpp  main.cpp  settings.hpp
src/animals/: Antelope.cpp  Antelope.hpp  Fox.cpp  Fox.hpp  Human.cpp  Human.hpp  Sheep.cpp  Sheep.hpp  Turtle.cpp  Turtle.hpp  Wolf.cpp  Wolf.hpp
src/plants/: Dandelion.cpp  Dandelion.hpp  Grass.cpp  Grass.hpp  Guarana.cpp  Guarana.hpp  PineBorscht.cpp  PineBorscht.hpp  Wolfberry.cpp  Wolfberry.hpp
